product page edit

--- a/index.html
+++ b/index.html
@@ -1,68 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buy_now</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
-    rel="stylesheet"/>
-</head>
-<body>
-    
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section id="header">
-        <a href="#"><img src="img/logo.png" class="logo" alt=""></a>
+      <a href="#"><img src="img/logo.png" class="logo" alt="" /></a>
 
-        <div>
-            <ul id="navbar">
-                <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="cart.html"><i class="ri-shopping-cart-line"></i></a></li>
-            </ul>
-        </div>
+      <div>
+        <ul id="navbar">
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li>
+            <a href="cart.html"><i class="ri-shopping-cart-line"></i></a>
+          </li>
+        </ul>
+      </div>
     </section>
 
     <section id="hero">
-        <h4>Trade-in-offer</h4>
-        <h2>Super value deals</h2>
-        <h1>On all products</h1>
-        <p>Save more with coupons $ up to 70% off! </p>
-        <button>Shop Now</button>
-
+      <h4>Trade-in-offer</h4>
+      <h2>Super value deals</h2>
+      <h1>On all products</h1>
+      <p>Save more with coupons $ up to 70% off!</p>
+      <button>Shop Now</button>
     </section>
 
     <section id="feature" class="section-p1">
-        <div class="fe-box">
-            <img src="img/features/f1.png" alt="">
-            <h6>Free Shipping</h6>
+      <div class="fe-box">
+        <img src="img/features/f1.png" alt="" />
+        <h6>Free Shipping</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f2.png" alt="" />
+        <h6>Online Order</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f3.png" alt="" />
+        <h6>Save Money</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f4.png" alt="" />
+        <h6>Promotion</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f5.png" alt="" />
+        <h6>Happy Sell</h6>
+      </div>
+      <div class="fe-box">
+        <img src="img/features/f6.png" alt="" />
+        <h6>F24/7 Support</h6>
+      </div>
+    </section>
+
+    <section id="products" class="section-p1">
+        <div class="heading" >
+            <h2> Feature Products</h2>
+            <p>Summer Collection New Mordern design</p>
         </div>
-         <div class="fe-box">
-            <img src="img/features/f2.png" alt="">
-            <h6>Online Order</h6>
-        </div>
-         <div class="fe-box">
-            <img src="img/features/f3.png" alt="">
-            <h6>Save Money</h6>
-        </div>
-         <div class="fe-box">
-            <img src="img/features/f4.png" alt="">
-            <h6>Promotion</h6>
-        </div>
-         <div class="fe-box">
-            <img src="img/features/f5.png" alt="">
-            <h6>Happy Sell</h6>
-        </div>
-         <div class="fe-box">
-            <img src="img/features/f6.png" alt="">
-            <h6>F24/7 Support</h6>
+
+        <div class="all-product">
+           <div class="item1">
+                <img src="img/products/f1.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f2.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f3.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f4.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f5.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f6.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f7.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/f8.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
         </div>
     </section>
 
 
+
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
