banner and sum banner

--- a/index.html
+++ b/index.html
@@ -209,6 +209,175 @@
         </div>
     </section>
 
+    <section id="banner" class="section-m1" >
+      
+        <h4>Repair Service</h4>
+        <h2>Up to <span>70% Off</span> All t-Shirt & Accessories</h2 >
+        <button class="normal">Explore More</button>
+     
+    </section>
+
+    <section id="products" class="section-p1">
+        <div class="heading" >
+            <h2> New Arrivals</h2>
+            <p>Summer Collection New Mordern design</p>
+        </div>
+
+        <div class="all-product">
+           <div class="item1">
+                <img src="img/products/n1.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n2.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n3.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n4.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n5.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n6.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n7.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+            <div class="item1">
+                <img src="img/products/n8.jpg" alt="">
+
+                <div class="dis" >
+                    <span>addidas</span>
+                    <h5>cartoon t-shirt</h5>
+                    <div class="star">
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                      <i>&#9733;</i>
+                    </div>
+                 <h4>$78</h4>
+                </div>
+                <a href="addcart.html"><i class="ri-shopping-cart-line cart"></i></a>                
+           </div>
+        </div>
+    </section>
+
+    <section id="sm-banner" class="section-p1">
+      <div class="bannerbox">
+        <h4>crazy deals</h4>
+        <h2>buy 1 get 1 fee</h2>
+        <span>The best clasic dress is on sale at cara</span>
+        <button class="normal">Learn More</button>
+      </div>
+        <div class="bannerbox">
+        <h4>crazy deals</h4>
+        <h2>buy 1 get 1 fee</h2>
+        <span>The best clasic dress is on sale at cara</span>
+        <button class="normal">Learn More</button>
+      </div>
+
+    </section>
 
 
     <script src="script.js"></script>
