--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buy_now</title>
+    
     <link rel="stylesheet" href="style.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
+
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
       rel="stylesheet"
     />
   </head>
@@ -364,21 +365,50 @@
     </section>
 
     <section id="sm-banner" class="section-p1">
-      <div class="bannerbox">
-        <h4>crazy deals</h4>
-        <h2>buy 1 get 1 fee</h2>
+      <div class="bannerbox1 special">
+        <h4 class="special">crazy deals</h4>
+        <h2 class="special">buy 1 get 1 free</h2>
         <span>The best clasic dress is on sale at cara</span>
         <button class="normal">Learn More</button>
       </div>
-        <div class="bannerbox">
-        <h4>crazy deals</h4>
-        <h2>buy 1 get 1 fee</h2>
+        <div class="bannerbox2 special">
+        <h4>spring/summer</h4>
+        <h2>upcoming session</h2>
         <span>The best clasic dress is on sale at cara</span>
         <button class="normal">Learn More</button>
       </div>
 
     </section>
 
+    <section id="banner3" class="section-p1">
+      <div class="banner">
+        <h2>SESONAL SALE</h2>
+        <h3>Winter Collection 50% OFF</h3>
+      </div>
+      <div class="banner ii">
+        <h2>NEW FOOTWEAR COLLECTION</h2>
+        <h3>Summer/Spring 2025</h3>
+      </div>
+      <div class="banner iii">
+        <h2>T-SHIRT</h2>
+        <h3>New Trandy Prints</h3>
+      </div>
+    </section>
+
+    <section id="newsletter" class="section-p1 section-m1">
+      <div class="newstext">
+        <h4>Signup for Newsletters</h4>
+        <p>Get Email update about our latest shop and <span>special offers.</span></p>
+      </div>
+      <div class="form">
+        <input type="text" placeholder="Your Gmail Address">
+        <button class="normal">SignUp</button>
+      </div>
+    </section>
+
+    <footer>
+      
+    </footer>
 
     <script src="script.js"></script>
   </body>
