--- a/index.html
+++ b/index.html
@@ -406,8 +406,52 @@
       </div>
     </section>
 
-    <footer>
-      
+    <footer id="footer" class="section-p1">
+      <div class="col">
+        <img class="logo" src="img/logo.png" alt="">
+        <h4>contact</h4>
+        <p><strong>Address :</strong> 562 Willengton Road, Street 32,San Francisco</p>
+        <p><strong>Phone :</strong> +01 2222 365/+91 0123456789</p>
+        <p><strong>Hours :</strong> 10:00 - 18:00,Mon-Sat</p>
+        <div class="follow">
+          <h4>Follw Us</h4>
+          <div class="icon">
+            <a href="#"><i class="ri-facebook-fill"></i></a>
+            <a href="#"><i class="ri-twitter-x-fill"></i></a>
+            <a href="#"><i class="ri-instagram-fill"></i></a>
+            <a href="#"><i class="ri-pinterest-fill"></i></a>
+            <a href="#"><i class="ri-youtube-fill"></i></a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <h4>About</h4>
+        <a href="#">About Us</a>
+        <a href="#">Delivery information</a>
+        <a href="#">Privacy Policy</a>
+        <a href="#">Terms & Condition</a>
+        <a href="#">Contact Us</a>
+      </div>
+      <div class="col">
+        <h4>My Account</h4>
+        <a href="#">Sign In </a>
+        <a href="#">View Cart</a>
+        <a href="#">My Whishlist</a>
+        <a href="#">Track My Order</a>
+        <a href="#">Help</a>
+      </div>
+      <div class="col install">
+        <h4>From AppStore or Google Play</h4>
+        <div class="row">
+          <img src="img/pay/app.jpg" alt="">
+          <img src="img/pay/play.jpg" alt="">
+        </div>
+        <p>Secure Payment Getway</p>
+        <img src="img/pay/pay.png" alt="">
+      </div>
+      <div class="copyright">
+        <p>© copyright HTML/CSS/JS </p>
+      </div>
     </footer>
 
     <script src="script.js"></script>
