--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
           <li><a href="blog.html">Blog</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
-          <li>
-            <a href="cart.html"><i class="ri-shopping-cart-line"></i></a>
-          </li>
+          <li id="lg-bag"><a href="cart.html"><i class="ri-shopping-cart-line"></i></a></li>
+          <a href="#" id="close"><i class="ri-arrow-go-back-line"></i></a>
         </ul>
+      </div>
+      <div id="mobile">
+        <i class="ri-shopping-cart-line"></i>
+        <i id="bar" class="ri-menu-3-line"></i>
       </div>
     </section>
 
@@ -64,7 +67,7 @@
       </div>
     </section>
 
-    <section id="products" class="section-p1">
+    <section id="products">
         <div class="heading" >
             <h2> Feature Products</h2>
             <p>Summer Collection New Mordern design</p>
@@ -456,4 +459,4 @@
 
     <script src="script.js"></script>
   </body>
-</html>
+</html> 
